<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/tab2_1">

        <Button
            android:text="@string/sin"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:id="@+id/sin"
            android:layout_weight="1"
            android:onClick="onClick" />

        <Button
            android:text="@string/cos"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:id="@+id/cos"
            android:layout_weight="1"
            android:onClick="onClick" />

        <Button
            android:text="@string/tan"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:id="@+id/tan"
            android:layout_weight="1"
            android:onClick="onClick" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_width="60dp"></LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:id="@+id/tab2_2"
        android:layout_below="@id/tab2_1">

        <Button
            android:text="@string/sininv"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:id="@+id/sininv"
            android:layout_weight="1"
            android:onClick="onClick" />

        <Button
            android:text="@string/cosinv"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:id="@+id/cosinv"
            android:layout_weight="1"
            android:onClick="onClick" />

        <Button
            android:text="@string/taninv"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:id="@+id/taninv"
            android:layout_weight="1"
            android:onClick="onClick" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_width="60dp"></LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:id="@+id/tab2_3"
        android:layout_below="@id/tab2_2">

        <Button
            android:text="@string/hyperbolicSine"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:id="@+id/hypsin"
            android:layout_weight="1"
            android:onClick="onClick" />

        <Button
            android:text="@string/hyperbolicCosine"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:id="@+id/hypcos"
            android:layout_weight="1"
            android:onClick="onClick" />

        <Button
            android:text="@string/hyperbolicTan"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:id="@+id/hyptan"
            android:layout_weight="1"
            android:onClick="onClick" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_width="60dp"></LinearLayout>
    </LinearLayout>

</RelativeLayout>