<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/tab2_1">

        <Button
            android:text="@string/cosec"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:id="@+id/cosec"
            android:layout_weight="1"
            android:onClick="onClick" />

        <Button
            android:text="@string/sec"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:id="@+id/sec"
            android:layout_weight="1"
            android:onClick="onClick" />

        <Button
            android:text="@string/cot"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:id="@+id/cot"
            android:layout_weight="1"
            android:onClick="onClick" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_width="60dp"></LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:id="@+id/tab2_2"
        android:layout_below="@id/tab2_1">

        <Button
            android:text="@string/cosecinv"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:id="@+id/cosecinv"
            android:layout_weight="1"
            android:onClick="onClick" />

        <Button
            android:text="@string/secinv"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:id="@+id/secinv"
            android:layout_weight="1"
            android:onClick="onClick" />

        <Button
            android:text="@string/cotinv"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:id="@+id/cotinv"
            android:layout_weight="1"
            android:onClick="onClick" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_width="60dp"></LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:id="@+id/tab2_3"
        android:layout_below="@id/tab2_2">

        <Button
            android:text="@string/hyperboliccosine"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:id="@+id/hypcosec"
            android:layout_weight="1"
            android:onClick="onClick" />

        <Button
            android:text="@string/hyperbolicsecant"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:id="@+id/hypsec"
            android:layout_weight="1"
            android:onClick="onClick" />

        <Button
            android:text="@string/hyperboliccotant"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:id="@+id/hypcot"
            android:layout_weight="1"
            android:onClick="onClick" />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_width="60dp"></LinearLayout>
    </LinearLayout>

</RelativeLayout>