<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/tab_2_1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="65dp">

            <Button
                android:text="@string/epown"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:id="@+id/epown"
                android:layout_weight="1"
                android:onClick="onClick" />

            <Button
                android:text="@string/Mod"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:id="@+id/Mod"
                android:layout_weight="1"
                android:onClick="onClick" />

            <Button
                android:text="("
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:id="@+id/openBracket"
                android:layout_weight="1"
                android:onClick="onClick" />

            <Button
                android:text=")"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:id="@+id/closeBracket"
                android:layout_weight="1"
                android:onClick="onClick" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_width="80dp"></LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_2_2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_below="@+id/tab_2_1">

            <Button
                android:text="@string/square"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:id="@+id/square"
                android:layout_weight="1"
                android:onClick="onClick" />

            <Button
                android:text="@string/xpown"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:id="@+id/xpown"
                android:layout_weight="1"
                android:onClick="onClick" />

            <Button
                android:text="@string/sqrt"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:id="@+id/sqrt"
                android:layout_weight="1"
                android:onClick="onClick" />

            <Button
                android:text="@string/cuberoot"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:id="@+id/cbrt"
                android:layout_weight="1"
                android:onClick="onClick" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_width="80dp"></LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_2_3"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_below="@+id/tab_2_2">

            <Button
                android:text="@string/factorial"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:id="@+id/fact"
                android:layout_weight="1"
                android:onClick="onClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:id="@+id/inverse"
                android:layout_weight="1"
                android:text="@string/inverse"
                android:onClick="onClick" />

            <Button
                android:text="@string/log"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:id="@+id/log"
                android:layout_weight="1"
                android:onClick="onClick" />

            <Button
                android:text="ln"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:id="@+id/ln"
                android:layout_weight="1"
                android:onClick="onClick" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_width="80dp"></LinearLayout>

        </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tab_2_3"
        android:layout_alignParentStart="true">

        <Button
            android:text="X"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_x"
            android:layout_weight="1"
            android:onClick="onClick" />

        <Button
            android:text="Y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_y"
            android:layout_weight="1"
            android:onClick="onClick" />

        <Button
            android:text="Z"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_z"
            android:layout_weight="1"
            android:onClick="onClick" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_width="53dp"></LinearLayout>
    </LinearLayout>


</RelativeLayout>